<resources>
    <string name="app_name">Health Tracker</string>
    <string name="clicker_nav">Clicker Exercise</string>
    <string name="clicker_start">Clicked 0 Times</string>
    <string name="clicker_button">Click Me!</string>
    <string name="stopwatch_start">0:00:00.000</string>
    <string name="stopwatch_nav">Stopwatch</string>
    <string name="enable_notifs">Enable Notifications</string>
    <string name="disable_notifs">Disable Notifications</string>
    <string name="exercise_log">Exercise Log</string>
    <string name="image_button">Images</string>
    <string name="quantity">Quantity</string>
    <string name="exercise">Exercise</string>
    <string name="description">Description</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="next">Next</string>
    <string name="_1_3">1/3</string>
    <string name="prev">Prev</string>
    <string name="caption">Caption</string>
    <string name="upload_new_avatar">Upload New Avatar</string>
    <string name="select_image">Select Image</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="clicker_exercise_score">Clicker Exercise Score: 0</string>
    <string name="home_page_visits">Home Page Visits: 1</string>
    <string name="username">username</string>
    <string name="logout">Logout</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
</resources>
